<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/loginPageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/loginPageLogo"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:hint="@string/UserName"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/username"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:layout_below="@id/login_username"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/login_password"
        android:background="@drawable/rounded_button_background"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/login" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/register" />

    </LinearLayout>


</RelativeLayout>