<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/registerPageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/register_fullname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/registerPageLogo"
        android:drawableStart="@drawable/username"/>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_fullname"
        android:drawableStart="@drawable/username"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_username"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"/>

    <EditText
        android:id="@+id/register_cnf_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button_background"
        android:layout_below="@+id/register_cnf_password"
        android:textColor="@android:color/white"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/login" />
    </LinearLayout>

</RelativeLayout>